syntax = "proto3";

package api.prom;

import "google/api/annotations.proto";
import "validate/validate.proto";
import "base.proto";
import "prom/node.proto";

option go_package = "prometheus-manager/api/prom/v1;v1";
option java_multiple_files = true;
option java_package = "api.prom.v1";

service Dir {
  rpc CreateDir (CreateDirRequest) returns (CreateDirReply) {
    option (google.api.http) = {
      post: "/prom/v1/dir/add"
      body: "*"
    };
  }
  rpc UpdateDir (UpdateDirRequest) returns (UpdateDirReply) {
    option (google.api.http) = {
      put: "/prom/v1/dir/edit/{id}"
      body: "*"
    };
  }
  rpc DeleteDir (DeleteDirRequest) returns (DeleteDirReply) {
    option (google.api.http) = {
      delete: "/prom/v1/dir/delete/{id}"
    };
  }
  rpc GetDir (GetDirRequest) returns (GetDirReply) {
    option (google.api.http) = {
      get: "/prom/v1/dir/{id}"
    };
  }
  rpc ListDir (ListDirRequest) returns (ListDirReply) {
    option (google.api.http) = {
      post: "/prom/v1/dir/list"
      body: "*"
    };
  }
}

message CreateDirRequest {
  DirItem dir = 1 [(validate.rules).message.required = true];
}
message CreateDirReply {
  Response response = 1;
}

message UpdateDirRequest {
  DirItem dir = 1 [(validate.rules).message.required = true];
  uint32 id = 2 [(validate.rules).uint32 = {gt: 0}];
}
message UpdateDirReply {
  Response response = 1;
}

message DeleteDirRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
}
message DeleteDirReply {
  Response response = 1;
}

message GetDirRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
}
message GetDirReply {
  DirItem dir = 1;
  Response response = 2;
}

message ListDirRequestParams {
  string keyword = 1;
}

message ListDirRequest {
  PageRequest page = 1;
  ListDirRequestParams params = 2;
}
message ListDirReply {
  repeated DirItem list = 1;
  PageReply page = 2;
  Response response = 3;
}